tests/bad-ctor-01/out.txt
error: pattern does not have an arrow type: d
  ┌─ err.sml:4:5
  │
4 │     A _ => 1
  │     ^^^

typechecking failed
